# 20

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: ci-trigger-235ac.txt
audits/: BIT_INDEX_COVARIANCE_CI_AUDIT.md  CI_HISTORY.md  CORRELATED_WP4_CI_AUDIT.md  INDEPENDENT_VISITS_CI_AUDIT.md  LIVE_RECEIPT_CI_AUDIT.md  NSSTOOLS_PARITY_CI_AUDIT.md  PRIVATE_PILOT_SUPPORT_CI_AUDIT.md  SED_AND_SPECTRAL_CI_AUDIT.md  SPECTRAL_MULTIPLICITY_CI_AUDIT.md  V6_COVARIANCE_CI_AUDIT.md  WP4_CI_AUDIT.md  WP5_CI_AUDIT.md  WP5_FINAL_CI_AUDIT.md  WP5_FIX_CI_AUDIT.md  alternative_hypotheses_ci.md  alternative_hypotheses_fix_ci.md  async_cached_phase_ci.md  async_gaia_v7_ci.md  current_main_ci_235ac.md  current_main_ci_235ac_trigger.md  final_claim_readiness_ci.md  final_evidence_assembly_ci.md  final_evidence_assembly_fix_ci.md  live_gaia_desi_repair_ci.md  novelty_gate_ci.md  primary_consensus_ci.md  source_bundle_commands_ci.md
docs/: DARK668_DYNAMICAL_AUDIT_PROTOCOL_v0.1.md  DARK668_KEPLERIAN_PROTOCOL_v0.1.md  DARK668_PERIOD_PRIOR_RV_PROTOCOL_v0.1.md  DARK668_PROTOCOL_v0.1.md  DATA_CONTRACT.md  RESEARCH_PLAN.md  WP2B_LAMOST_DR8_CONTRACT.md  WP2_BROAD_COVERAGE_PROTOCOL.md  WP2_DESI_FILE_PLAN.md  WP2_EXACT_OVERLAP_PROTOCOL.md  WP3_ORBIT_VALIDATION_PROTOCOL.md  WP4_MASS_INFERENCE_PROTOCOL.md  WP5_ALTERNATIVE_HYPOTHESES_PROTOCOL.md  WP5_COMPOSITE_SED_PROTOCOL.md  WP5_CONTAMINANT_REJECTION_PROTOCOL.md  WP5_ROCHE_GEOMETRY_PROTOCOL.md  WP5_SOURCE_BUNDLE_CONTRACT.md  WP5_SPECTRAL_MULTIPLICITY_PROTOCOL.md  WP6_CANDIDATE_SAFE_ATTRITION.md  WP6_CLAIM_READINESS_PROTOCOL.md  (+4 more)
(+340 files in other folders)
